methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:6: error: type mismatch;
 found   : Unit
 required: Boolean
     return seenBaggle = true
                       ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (stepper <- 1 to 6) {
               ^