methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var seenBaggle = false
  for (stepper <- 1 to 6) {
    forward()
    if (isOverBaggle == true) {
     return seenBaggle = true
    }
  }
}